--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -34,7 +34,7 @@
 {{top}}
 *Dutch: [[fabriek]] ''f'' (''general''), [[papierfabriek]] ''f'' (''for paper''), [[staalfabriek]] (''for steel'') [[textielfabriek]] (''for textiles'') 
 *Finnish: [[tehdas]]
-*French: [[usine]] ''f''
+*French: [[manufacture]] ''f''
 *German: [[Fabrik]] ''f'' (''general''), [[Werk]] ''n'' (''general'') [[Papiermühle]] ''f'' (''for paper'')
 {{mid}}
 *Polish: [[fabryka]] ''f''
@@ -45,7 +45,7 @@
 {{top}}
 *Dutch: [[fabriek]] ''f'' (''general''), [[papierfabriek]] ''f'' (''for paper''), [[staalfabriek]] (''for steel'') [[textielfabriek]] (''for textiles'')
 *Finnish: [[tehdas]], [[tehdasrakennus]]
-*French: [[usine]] ''f''
+*French: [[manufacture]] ''f''
 *German: [[Fabrik]] ''f'' (''general''), [[Werk]] ''n'' (''general'') [[Papiermühle]] ''f'' (''for paper'')
 {{mid}}
 *Polish: [[fabryka]] ''f''
