--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -163,6 +163,7 @@ For an example of a character with multiple pronunciations (and hence Romanizati
 ** Decimal: 42219
 
 [[Category:Japanese kanji]]
+[[Category:Grade 1 kanji]]
 
 [[de:月]]
 [[es:月]]
