--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -48,6 +48,9 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Japanese: [[で]] (de), [[に]] (ni)
 *Korean: [[~에서]] (-eseo)
 {{mid}}
+*{{ku}}: Kurdish:
+  Kurmancî: [[li]]
+  Soranî: [[le]]
 *Latin: ''[[locative]] case''
 *[[Persian]]: {{FAchar|[[در|دَر]]}} (dær)
 *Polish: [[przy]]
@@ -128,6 +131,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 {{bottom}}
 
 ----
+
 ==Danish==
 
 ===Conjunction===
