--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -87,6 +87,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 {{mid}}
 *Italian: [[a#Italian|a]]
 *Japanese: [[に]] (ni)
+*{{ku}}: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
 *Latin: ''[[ablative]] case''
 *Polish: [[w#Polish|w]]
 *Portuguese: [[a#Portuguese|a]]
@@ -118,6 +119,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Italian: [[a#Italian|a]]
 *Japanese: [[に]] (ni), [[を]] (o)
 *Korean: [[~에서]] (-eseo)
+*{{ku}}: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
 *Portuguese: [[a#Portuguese|a]]
 *Russian: [[в#Russian|в]] (v), [[на]] (na)
 *Slovak: [[do#Slovak|do]]
