--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -29,6 +29,7 @@
 *Finnish: [[tarttua]]
 {{mid}}
 *Latin: [[capio]]
+*Norwegian: [[gripe]]
 *Old English: [[niman]]
 *Swedish: [[fånga]]
 {{bottom}}
@@ -39,6 +40,7 @@
 *Dutch: [[grijpen]], [[aangrijpen]]
 {{mid}}
 *Finnish: [[tarttua]] [[tilaisuus|tilaisuuteen]]
+*Norwegian: [[gripe]]
 {{bottom}}
 
 
