fmt; tran +ja <quadrilateral#734953>

--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -2,16 +2,20 @@
 ===Noun===
 '''quadritaleral'''
 # a [[polygon]] having four sides.
-#:'''Translations'''
-#:*[[Dutch]]: [[vierhoek]]
-#:*{{it}}: [[quadrilatero]] ''m''
-#:*[[Romanian]]: [[patrulater]], [[cadrilater]]
+
+====Translations====
+*[[Dutch]]: [[vierhoek]]
+*{{it}}: [[quadrilatero]] ''m''
+*Japanese: [[四辺形]] (shihenkei)
+*[[Romanian]]: [[patrulater]], [[cadrilater]]
+
 ===Adjective===
 '''quadrilateral'''
 # having four sides.
-#:'''Translations'''
-#:*[[Dutch]]: [[vierhoekig]]
-#:*{{ga}}: [[ceathairshleasach]]
-#:*{{it}}: [[quadrilatero]]
+
+====Translations====
+*[[Dutch]]: [[vierhoekig]]
+*{{ga}}: [[ceathairshleasach]]
+*{{it}}: [[quadrilatero]]
 
 [[pl:quadrilateral]]
