/* Derived terms */ ++, 2 cols <pig#738381>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -129,10 +129,11 @@
 {{bottom}}
 
 ===Derived terms===
+{{top}}
 *[[blind pig]]
 *[[bush pig]]
 *[[flying pig]]
-*[[guinea pig]] (not related)
+*[[guinea pig]] (not related)<!--not a related species or not a related term??-->
 *[[if pigs had wings]]
 *[[in a pig's eye]]
 *[[pig bed]]
@@ -144,6 +145,7 @@
 *[[pigheaded]]
 *[[pig in a blanket]]
 *[[pig in a poke]]
+{{mid}}
 *[[pig iron]]
 *[[pig it]]
 *[[pig Latin]]
@@ -154,10 +156,12 @@
 *[[pigskin]]
 *[[pigsty]]
 *[[pigtail]]
+*[[pigweed]]
 *[[potbellied pig]]
 *[[when pigs fly]]
 *[[whistle pig]]
 *[[year of the pig]]
+{{bottom}}
 
 [[Category:Mammals]]
 [[Category:1000 English basic words]]
