--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -26,6 +26,7 @@ French ''[[théorie]]'', from Latin ''[[theoria]]'', from Greek ''[[θεωρία
 *Japanese: 1. [[理論]] (りろん, riron), [[学説]] (がくせつ, gakusetsu); 2. [[定理]] (ていり, teiri); [[推測]] (すいそく, suisok), [[見解]] (けんかい), [[意見]] (いけん)
 *Norwegian: [[teori]] {{m}}
 *Swedish: [[teori]]
+*Turkish: [[teori]]
 
 ===Related terms===
 *[[complexity theory]]
@@ -51,3 +52,4 @@ French ''[[théorie]]'', from Latin ''[[theoria]]'', from Greek ''[[θεωρία
 
 [[it:theory]]
 [[fi:theory]]
+[[tr:teori]]
