/* Noun */ adjusting <division#741969>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -10,13 +10,13 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 #{{arithmetic}} (''uncountable'') The [[process]] of [[divide|dividing]] a number by another.
 #{{arithmetic}} A calculation that involves this process.
 #:''I've got ten divisions to do for my homework.''
-#A large [[military]] [[unit]].
+#A large [[military]] [[unit]], usually made up of two or three [[brigade]]s.
 #A [[section]] of a large [[company]].
-#(''biology'') A [[taxonomic]] [[classification]] in the [[plant kingdom]] corresponding to the [[phylum]] in [[animal kingdom]].
+#{{botany}} A [[rank]] ("division", ''divisio'' or "phylum") in [[plant]] [[taxonomy]] corresponding to the [[phylum]] in [[animal]] [[taxonomy]].
+#{{botany}} A [[taxon]] at the rank of division or phylum.
 #A disagreement; a difference of viewpoint between two sides of an argument.
 #(''Sports''): A group that distinguishes itself from the others.
 #(''music'') a florid instrumental variation of a melody in the 17th and 18th centuries, originally conceived as the dividing of each of a succession of long notes into several short ones.
-
 
 ====Translations====
 
@@ -26,7 +26,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
-*Dutch: [[deling]] ''f'', [[scheiding]] ''f''
+*Dutch: [[deling]] ''f''; [[verdeling]] ''f''; [[scheiding]] ''f''
 *Esperanto: [[divido]]
 *Finnish: [[jakaminen]], [[jako]]
 *French: division ''f''
@@ -48,7 +48,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
-*Dutch: [[deling]] ''f'', [[afdeling]] ''f'', [[verdeling]] ''f'', [[gedeelte]] ''n''
+*Dutch: [[deel]] ''n'', [[gedeelte]] ''n''
 *Finnish: [[osa]]
 |}
 | width=1% |
@@ -64,7 +64,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
-*Dutch: [[deling]] ''f'', [[delen]] ''n''
+*Dutch: [[deling]] ''f'';  [[delen]] ''n''
 *Esperanto: [[divido]]
 *Finnish: [[jako]], [[jakaminen]]
 *French: division ''f''
@@ -86,7 +86,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
-*Dutch: [[deling]] ''f''
+*Dutch: [[deling]] ''f''; [[staartdeling]] ''f''
 *Finnish: [[jakolasku]]
 |}
 | width=1% |
@@ -102,7 +102,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
-*Dutch: [[afdeling]] ''f'', [[divisie]] ''f'', [[eenheid]] ''f''
+*Dutch: [[divisie]] ''f'',
 *Esperanto: [[divizio]]
 *German: [[Abteilung]] ''f''
 |}
