trying to do the sensible thing <species#742481>

--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -1,25 +1,35 @@
+==Latin==
+===Etymology===
+''specere'' to [[see]] + ''-ies'' suffix signifying [[abstract]] noun
+===Noun===
+'''species''' ''f'', ''speciei''
+#[[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]] 
+
+==Translingual==
+===Etymology===
+{{L.}} ''species''
+=== Noun ===
+'''species'''
+#{{botany}} a [[rank]] in a [[taxonomic]] [[classification]], below both [[family]] and [[genus]].
+#{{botany}} a [[taxon]] at this rank
+
 {{wikipedia}}
 ==English==
-
 === Etymology ===
-
-Latin: ''species'' [[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]] ''specere'' to [[see]] + ''-ies'' suffix signifying [[abstract]] noun
+{{L.}} ''species'' [[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]] ''specere'' to [[see]] + ''-ies'' suffix signifying [[abstract]] noun
 
 === Noun ===
 '''species''' (''plural:'' '''species''')
 
 # A group of objects having similar appearance
 #: ''This species of rock is unique to the area''
-#:''Pigeons and ducks are two species of birds.''
-# A well-differentiated form of [[organism]], more distinct than a [[variety]]
+# {{taxonomy}} a [[rank]] in a [[taxonomic]] [[classification]], below both [[family]] and [[genus]].
+# {{taxonomy}} a [[taxon]] at this rank
 #: ''Hence, in determining whether a form should be ranked as a species or a variety, the opinion of naturalists having sound judgment and wide experience seems the only guide to follow.'' -- Darwin, '''On the Origin of Species'''
-# {{taxonomy}} A well-differentiated [[clade]] whose members are similar
-# {{taxonomy}} The major [[subset]] of a [[genus]], containing organisms with similar [[genotype]]s and [[phenotype]]s, nearly identical [[genetic sequence]]s, or recent common ancestry as indicated in the [[fossil record]]
-# {{taxonomy}} Among organisms which [[reproduce]] [[sexually]], a group capable of producing [[fertile]] [[offspring]] with one another through [[sex]].
 # {{chemistry}} Referes to a specific known or unknown [[element]], [[molecule]], [[radical]] or [[ion]].  Used commonly when the [[entity]]'s status as an element, molecule etc. is unknown.
 
 ===Note===
-A specific species is referred to by its genus and species in italics with the genus name capitalized (e.g. The [[cougar]] is in the genus ''Felis'' and the species ''concolor'', so its scientific name is ''Felis concolor'').
+The scientific name of a species (3) is written in italics with the genus name capitalized: e.g. the scientific name of the [[cougar]] is ''Felis concolor''.
 
 ==== Related Terms ====
 *[[speciate]]
