--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -1,35 +1,19 @@
-==Latin==
-===Etymology===
-''specere'' to [[see]] + ''-ies'' suffix signifying [[abstract]] noun
-===Noun===
-'''species''' ''f'', ''speciei''
-#[[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]] 
-
-==Translingual==
-===Etymology===
-{{L.}} ''species''
-=== Noun ===
-'''species'''
-#{{botany}} a [[rank]] in a [[taxonomic]] [[classification]], below both [[family]] and [[genus]].
-#{{botany}} a [[taxon]] at this rank
-
 {{wikipedia}}
 ==English==
 === Etymology ===
 {{L.}} ''species'' [[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]] ''specere'' to [[see]] + ''-ies'' suffix signifying [[abstract]] noun
 
 === Noun ===
-'''species''' (''plural:'' '''species''')
+[[Category:English irregular plurals]]
+{{en-noun|species|species}}
 
-# A group of objects having similar appearance
+# A [[group]] of [[objects]] having [[similar]] [[appearance]].
 #: ''This species of rock is unique to the area''
-# {{taxonomy}} a [[rank]] in a [[taxonomic]] [[classification]], below both [[family]] and [[genus]].
-# {{taxonomy}} a [[taxon]] at this rank
+# {{taxonomy}} A [[rank]] in a [[taxonomic]] [[classification]], below both [[family]] and [[genus]].
+# {{taxonomy}} A [[taxon]] at this rank.
+#*'''Usage note:''' The scientific name of a species is written in italics with the genus name capitalized: e.g. the scientific name of the [[cougar]] is ''Felis concolor''.
 #: ''Hence, in determining whether a form should be ranked as a species or a variety, the opinion of naturalists having sound judgment and wide experience seems the only guide to follow.'' -- Darwin, '''On the Origin of Species'''
-# {{chemistry}} refers to a specific known or unknown [[element]], [[molecule]], [[radical]] or [[ion]].  Used commonly when the [[entity]]'s status as an element, molecule etc. is unknown.
-
-===Note===
-The scientific name of a species (3) is written in italics with the genus name capitalized: e.g. the scientific name of the [[cougar]] is ''Felis concolor''.
+# {{chemistry}} Refers to a specific known or unknown [[element]], [[molecule]], [[radical]] or [[ion]].  Used commonly when the [[entity]]'s status as an element, molecule etc. is unknown.
 
 ==== Related Terms ====
 *[[speciate]]
@@ -41,6 +25,7 @@ The scientific name of a species (3) is written in italics with the genus name c
 *[[specific]]
 
 ====Translations====
+{{top}}
 *Chinese: [[種]] / [[种]], [[類]] / [[类]], [[種類]] / [[种类]]
 *Dutch: [[soort]] ''f''
 *Finnish: [[laji]], [[eläinlaji]] (animal species)
@@ -49,12 +34,14 @@ The scientific name of a species (3) is written in italics with the genus name c
 *Indonesian: [[spesies]], [[jenis]]
 *Interlingua: [[specie]]
 *Italian: [[specie]] ''f'', (plural: [[speci]])
+{{mid}}
 *Japanese: [[種]] ([[しゅ]], shu), [[類]] ([[るい]], rui), [[種類]] ([[しゅるい]], shurui)
 *Lithuanian: [[rūšis]] ''f''
 *Polish: [[gatunek]] ''m''
 *Portuguese: [[espécie]] ''f''
 *Romanian: [[specie]] ''f''
 *Swedish: [[art]] ''c''
+{{bottom}}
 
 ===See also===
 *[[family]]
@@ -66,8 +53,14 @@ The scientific name of a species (3) is written in italics with the genus name c
 *[[variety]]
 *[[binomial nomenclature]]
 
-[[Category:English irregular plurals]]
-[[Category: Latin nouns]]
+----
+==Latin==
+===Etymology===
+''[[specere]]'', "to [[see]]" + ''-ies'' suffix signifying [[abstract]] noun.
+===Noun===
+'''species''' ''f'', ''speciei''
+#[[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]] 
+
 
 [[de:species]]
 [[io:Species]]
