--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -1,39 +1,41 @@
 ==English==
-===Etymology===
-cop, verb  from ''[[capere]]'', Latin and Old French 
-capere: to capture. 
+
+===Etymology 1===
+From {{L.}} and Old French  ''[[capere]]''to capture. 
 
 ====Verb====
-'''to cop'''
+{{en-infl-reg-consonant|cop||p}}
+
 # Used colloquially to take, especially fraudulently, as in "copping a plea" (referring to a [[felon]] taking the offer of [[prosecutor]]s to reduced charges, pleading guilty to a [[misdemeanor]], saving the government the [[inconvenience]] and expense of a [[trial]]).
 #: ''Yo, let's go '''cop''' some [[bud]].''
-# to [[assume]] or [[adopt]], as ''to cop an attitude''
+# To [[assume]] or [[adopt]], as ''to cop an attitude.''
 
-=====Derived terms=====
+====Derived terms====
 *[[cop a feel]]
 *[[cop off]]
 *[[cop on]]
 *[[cop out]], [[cop-out]]
 
-===Etymology===
+===Etymology 2===
 Short for [[copper]] "police officer", itself from "cop" above ("one who cops", e.g. criminals).  
 
 Sometimes explained as deriving from copper buttons or badges of early [[NYPD]] uniforms, though this is often stated to be a [[folk etymology]].
 
 ====Noun====
-'''cop'''
+{{en-noun-reg}}
+
 # (slang) [[police officer|Police officer]].
 
-=====Translations=====
-*{{sk}}: [[poliš]] ''m'', [[hekáč]] ''m''
+====Translations====
+*[[w:Slovak language|Slovak]]: [[poliš]] ''m'', [[hekáč]] ''m''
 
 ----
 
 ==Slovak==
-=== Noun ===
+===Noun===
 :'''cop''' ''m'', '''copy''' ''pl''
 :'''cop''' ''stem''
 :declension pattern [[Slovak declension pattern dub|dub]]
-#[[braid]]
+# [[braid]]
 
 [[ja:cop]]
