--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -21,5 +21,6 @@ From the [[Persian]] words {{FAchar|&#1662;&#1575;&#1610;&#1580;&#1575;&#1605;&#
 
 [[Category:Hindi derivations]]
 [[Category:Persian derivations]]
+[[Category:English pluralia tantum]]
 
 <!-- NOTE: If you edit this page, please also edit "pyjamas" -->
