--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -24,6 +24,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 #: ''He threw a rock at me.''
 # indicating state
 #: ''Men at work.''
+# the logogram [[@]]
 
 ====Translations====
 '''at''' (indicating place)
