--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -31,6 +31,7 @@ Latin [[consumere]]
 *Finnish: [[käyttää]] (1), [[kuluttaa]] (1), [[syödä]] (2), [[tuhota]] (3), [[kalvata]] (4)
 *[[Latin]]: [[consumere]]
 *Spanish: [[consumir]]
+*Turkish: [[tüketmek]]
 
 [[io:Consume]]
 [[it:consume]]
