/* Derived words */ *[[consumer]] <consume#755819>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -24,6 +24,7 @@ Latin [[consumere]]
 #:''He was '''consumed''' with desire.''
 
 ===Derived words===
+*[[consumer]]
 *[[consumption]]
 *[[consumptive]]
 
