--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -113,7 +113,7 @@ From Middle English, from Old English ''[[þing]]''.
 *[[Irish]]: [[rud]], [[ní]]
 *Italian: [[cosa]] ''f''
 *Japanese: [[物]] ([[もの]], mono), [[事]] ([[こと]], koto)
-*Latin: [[rēs]]
+*Latin: [[res|rēs]]
 *Latvian: [[lieta]]
 *[[Marathi]]: [[वस्तु]] (vastu)
 *Norwegian: [[ting]], [[dings]], [[greie]]''m''
