robot  Adding: de, fi, fr <adjustment#760199>

--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -47,6 +47,9 @@
 
 [[Category:1000 English basic words]]
 
+[[de:adjustment]]
+[[fr:adjustment]]
 [[it:adjustment]]
 [[pt:Adjustment]]
+[[fi:adjustment]]
 [[uk:Adjustment]]
