--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -1,4 +1,7 @@
 ==English==
+
+A Theory is a lie that two or more people use as the truth to try to explain an idea. It is not a truth.
+
 ===Etymology===
 French ''[[théorie]]'', from Latin ''[[theoria]]'', from Greek ''[[θεωρία]]''.
 
