--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -13,5 +13,6 @@
 *Finnish: [[kuluttaminen]] (1), [[kulutus]] (1,2), [[tuberkuloosi]] (3)
 *French: [[consumer]] (1), [[consommation]] ''f'' (2), [[tuberculose]] ''f'' (3)
 
+[[fr:consumption]]
 [[it:consumption]]
 [[pl:consumption]]
