robot  Adding: fr <consume#772304>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -34,6 +34,7 @@ Latin [[consumere]]
 *Spanish: [[consumir]]
 *Turkish: [[tüketmek]]
 
+[[fr:consume]]
 [[io:Consume]]
 [[it:consume]]
 [[th:Consume]]
