--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -52,6 +52,8 @@ Via Norman French from Latin ''[[senior]]'', '''older''' or '''elder''', from ''
 '''sir''' ''f'' (''pl'' siroedd)
 #[[county]]
 
+[[fr:sir]]
 [[io:Sir]]
 [[it:sir]]
+[[ku:sir]]
 [[pl:sir]]
