corr. ko <bend#776996>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -24,6 +24,7 @@
 {{mid}}
 *Italian: [[piegare]]
 *Japanese: [[曲げる]] ([[まげる]], mageru) <!-- not checked -->
+*Korean: [[구부리다]]
 *Romanian: [[indoi]]
 *Spanish: [[curvar]]
 {{bottom}}
@@ -49,7 +50,7 @@
 
 [[gl:Bend]]
 [[ko:Bend]]
-[[io:Bend]]
+[[io:bend]]
 [[it:bend]]
 [[ku:bend]]
 [[fi:bend]]
