--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -60,6 +60,7 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 *Portuguese:  no [[entanto]]
 *[[Volapük]]: [[do#Volapük|do]]
 
+[[fr:though]]
 [[io:Though]]
 [[it:though]]
 [[fi:though]]
