robot  Adding: fr <fraction#788602>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -36,6 +36,7 @@ French from Latin ''[[fractio]]'', '''breaking''', from ''[[frangere]]'', '''bre
 *[[numerator]]
 *[[denominator]]
 
+[[fr:fraction]]
 [[io:Fraction]]
 [[it:fraction]]
 [[ja:fraction]]
