--- a/en/a/amai.4232.wikitext
+++ b/en/a/amai.4232.wikitext
@@ -12,15 +12,9 @@
 [[Category:Italian verb forms]]
 ----
 ==Japanese==
-===Adjective===
-[[甘い]]、[[あまい]]
-# Tasting like sugar or honey: [[sweet]]. (antonym: [[karai]])
-# Lacking saltiness. (antonym: karai)
-# Fragrance or atmosphere that is reminiscent of the taste of honey.
-# Having characteristic of something that lures people's hearts and mislead.
-# Lacking discipline. To lack strictness or accurateness.
-# An unsatisfactory or incomplete state.
-# A weak intensity.
+===Romaji===
+'''amai''' ([[あまい]])
+# [[甘い]]: [[sweet]]
 
-
+[[Category:Romaji]]
 [[fi:amai]]
