--- a/en/f/FM.26231.wikitext
+++ b/en/f/FM.26231.wikitext
@@ -5,7 +5,7 @@
 
 #Frequency Modulation
 
-==={{abreviation}}===
+==={{Abreviation}}===
 # {{geography}} [[Federated States of Micronesia]]
 
 [[et:FM]]
