--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -10,23 +10,20 @@
 #The edible head or "curd" of a cauliflower plant.
 
 ===Translations===
+{{top}}
 *Dutch: [[bloemkool]] {{f}}
-*Finnish: [[kukkakaali#Finnish|kukkakaali]]
+*Finnish: [[kukkakaali]]
 *French: [[chou-fleur]] {{m}}
-*German: [[Blumenkohl]] {{m}}, [[Karfiol]]
+*German: [[Blumenkohl]] {{m}}
+*Greek: [[κουνουπίδι]] [kunuˈpiði] {{n}}, [[ανθοκράμβη]] [anθo̞ˈkraɱvi] {{f}} (obsolete)
 *Hungarian: [[karfiol]]
+{{mid}}
 *Italian: [[cavolfiore]] {{m}}
 *Portuguese: [[couve-flor]] {{f}}
 *Romanian: [[conopidă]] {{f}}
 *Spanish: [[coliflor]] {{f}}
 *Swedish: [[blomkål]]
-*Urdu: [[گوبى]]
+{{bottom}}
 
 [[category:Vegetables]]
 [[Category:Plants]]
-
-[[fr:cauliflower]]
-[[gl:Cauliflower]]
-[[io:Cauliflower]]
-[[it:cauliflower]]
-[[nl:cauliflower]]
