--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -71,10 +71,12 @@ From Old English ''[[iland]]''.  The S was added by confusion with French ''[[is
 *[[Island]] - [[Iceland]] in other languages
 
 [[Category:1000 English basic words]]
-
+[[fr:island]]
 [[io:Island]]
 [[id:Island]]
 [[it:island]]
+[[hu:island]]
+[[ja:island]]
 [[pl:island]]
 [[fi:island]]
 [[sv:island]]
