robot  Adding: fr, gl, io, it, nl <cauliflower#799953>

--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -27,3 +27,8 @@
 
 [[category:Vegetables]]
 [[Category:Plants]]
+[[fr:cauliflower]]
+[[gl:Cauliflower]]
+[[io:Cauliflower]]
+[[it:cauliflower]]
+[[nl:cauliflower]]
