robot  Adding: el, io <vodka#802864>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -66,6 +66,8 @@
 [[Category:English nouns]]
 [[Category:Slovak language]]
 [[Category:Alcoholic beverages]]
+[[el:Vodka]]
 [[fr:vodka]]
+[[io:Vodka]]
 [[it:vodka]]
 [[pl:vodka]]
