--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -76,5 +76,5 @@ The translations below need to be checked by native speakers and inserted into t
 {{bottom}}
 
 [[Category:Malay derivations]]
-
-[[io:bamboo]]
+[[fr:bamboo]]
+[[io:Bamboo]]
