--- a/en/b/bitten.6800.wikitext
+++ b/en/b/bitten.6800.wikitext
@@ -30,8 +30,8 @@
 #to [[ask]], [[beg]], [[plead]], [[request]]
 
 [[Category:German verbs]]
-
 [[de:bitten]]
 [[fr:bitten]]
+[[io:Bitten]]
 [[it:bitten]]
 [[fi:bitten]]
