robot  Adding: et <division#813926>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -208,7 +208,7 @@ Finnish: [[kaari]], [[pääjakso]]
 [[Category:English nouns]]
 
 [[Category:1000 English basic words]]
-
+[[et:Division]]
 [[fr:division]]
 [[io:Division]]
 [[it:division]]
