--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -87,6 +87,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 {{mid}}
 *Russian: [[сломаться]]
 *Swedish: [[gå sönder]]
+*Swahili: [[kuvunjika]]
 {{bottom}}
 
 '''intransitive: interrupt or cease one's work or occupation temporarily'''
@@ -138,6 +139,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *German: [[kaputtmachen]]
 {{mid}}
 *Swedish: [[ha sönder]], [[ta sönder]]
+*Swahili: [[kuvunja]]
 {{bottom}}
 
 '''transitive: cause a person or animal to lose his/her/its will'''
