--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -21,6 +21,7 @@
 *Italian: [[cavolfiore]] {{m}}
 *Portuguese: [[couve-flor]] {{f}}
 *Romanian: [[conopidă]] {{f}}
+*Slovene: [[cvetača]] {{f}}
 *Spanish: [[coliflor]] {{f}}
 *Swedish: [[blomkål]]
 {{bottom}}
