--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -81,6 +81,7 @@ From Middle English, from Old English ''[[þing]]''.
 *:Cyrillic: [[ствар]] ''f''
 *:Latin: [[stvar]] ''f''
 *Spanish: [[cosa]] ''f''
+*Swahili: [[kitu]], [[vitu]] ''pl (noun 7/8)''
 *Swedish: [[sak]]
 *[[Tupinambá]]: [[mba'e]]
 *[[Welsh]]: [[peth]]
@@ -129,6 +130,7 @@ From Middle English, from Old English ''[[þing]]''.
 *:Latin: [[stvar]] ''f''
 *Slovene: [[stvar]] {{f}}, [[reč]] {{f}}
 *Spanish: [[cosa]] ''f''
+*Swahili: [[kitu]], [[vitu]] ''pl (noun 7/8)''
 *Swedish: [[sak]]
 *[[Tupinambá]]: [[mba'e]]
 *[[Welsh]]: [[peth]]
