--- a/en/e/estadounidense.4303.wikitext
+++ b/en/e/estadounidense.4303.wikitext
@@ -1,10 +1,12 @@
 ==Spanish==
 ===Noun===
-# term denoting a citizen of the'' [[United States]] of America''.
+'''estadounidense''' ''m'' 'f''
+# citizen of the [[United States]] of America.
 ===Adjective===
-#of the'' [[United States]] of America''
+'''estadounidense''' ''m'' 'f''
+# of the [[United States]] of America
 === See also ===
-
-*[[gringo]]
 *[[yanqui]]
-*[[Americano]] - American
+*[[gringo]]
+*[[americano]]
+*[[norteamericano]]
