--- a/en/e/estadounidense.4303.wikitext
+++ b/en/e/estadounidense.4303.wikitext
@@ -1,9 +1,9 @@
 ==Spanish==
 ===Noun===
-'''estadounidense''' ''m'' 'f''
+'''estadounidense''' ''m'' ''f''
 # citizen of the [[United States]] of America.
 ===Adjective===
-'''estadounidense''' ''m'' 'f''
+'''estadounidense''' ''m'' ''f''
 # of the [[United States]] of America
 === See also ===
 *[[yanqui]]
