electrical cable <BX#821192>

--- a/en/b/BX.4329.wikitext
+++ b/en/b/BX.4329.wikitext
@@ -1,3 +1,4 @@
 == [[abbreviation]] ==
 # an abbreviation for the U.S. Air Forces's ''[[Base Exchange]]''.
-#:''The price of goods at the BX is reduced but everything is of high quality''.
+#:''The price of goods at the '''BX''' is reduced, but everything is of high quality''.
+# A [[flexible]], [[metal-armored]] [[electrical cable]].
