--- a/en/b/BX.4329.wikitext
+++ b/en/b/BX.4329.wikitext
@@ -6,7 +6,10 @@
 * Rhymes: [[Rhymes:English:-ěx|-ěx]]
 
 ===Proper noun===
-# [[Base Exchange]] of the U.S. [[Air Force]].
+'''B.X.'''<br>
+'''BX'''
+
+# '''Base Exchange''' of the U.S. [[Air Force]].
 #:''Despite the reduced price of goods at the '''BX''', everything is of high quality''.
 
 ===Etymology===
