--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -20,7 +20,7 @@
 *Slovak: [[no#Slovak|no]] <!-- Yes, this is in the right place, no means yeah or yep in Slovak -->
 *Spanish: [[sí]]
 *Volapük: [[si#Volapük|si]]
-*Welsh: [[iah]] (pronounced "ee-ah"), apparently the direct Welsh-Celtic precursor of the English word "yeah."
+*Welsh: [[iah]] (pronounced "ee-ah"), Welsh-Celtic precursor of English "yeah."
 
 {{bottom}}
 
