--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -11,8 +11,8 @@ French from Latin ''[[maxim]]'' + ''[[-um]]''
 
 ===Noun===
 '''maximum''' (plural: '''[[maxima]]''' or '''[[maximums]]''')
-#[[highest]] [[limit]]
-#{{mathematics}} the greatest [[value]] of a [[set]] or other mathematical structure, esp. the [[global maximum]] or a [[local maximum]] of a [[function]]
+# [[high|Highest]] [[limit]].
+# {{mathematics}} The [[great]]est [[value]] of a [[set]] or other mathematical structure, esp. the [[global maximum]] or a [[local maximum]] of a [[function]].
 
 ====Synonyms====
 *[[max]]
@@ -21,14 +21,22 @@ French from Latin ''[[maxim]]'' + ''[[-um]]''
 *[[minimum]]
 
 ====Translations====
+'''highest limit'''
 {{top}}
-*Chinese: [[最]][[大]] (zui da, zui4 da4) (1), [[極]][[大]][[值]] (zuidazhi, zui4da4zhi2) (2)
+*Chinese: [[最]][[大]] (zui da, zui4 da4)
 *Finnish: [[maksimi]]
 *French: [[maximum'French|maximum]]
-*German: [[Maximum]] ''n'' (1,2)
+*German: [[Maximum]] ''n''
 {{mid}}
 *Latin: maximum
 *Romanian: maximum
+{{bottom}}
+
+'''greatest value'''
+{{top}}
+*Chinese: [[極]][[大]][[值]] (zuidazhi, zui4da4zhi2)
+{{mid}}
+*German: [[Maximum]] ''n''
 {{bottom}}
 
 ===Adjective===
