--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -41,10 +41,16 @@ French from Latin ''[[maxim]]'' + ''[[-um]]''
 
 ===Adjective===
 '''maximum'''
-#To the highest degree. ''Use the proper dose for the maximum effect.''
+# To the highest degree.
+#: ''Use the proper dose for the '''maximum''' effect.''
 
 ====Translations====
+'''highest degree'''
+{{top}}
 *Finnish: [[maksimaalinen]]
+{{mid}}
+
+{{bottom}}
 
 ===Derived terms===
 *[[maximal]]
