--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -53,12 +53,12 @@ French from Latin ''[[maxim]]'' + ''[[-um]]''
 {{bottom}}
 
 ===Derived terms===
-*[[maximal]]
-*[[maximize]]
 *[[local maximum]]
 *[[global maximum]]
+*[[maximal]]
+*[[maximize]]
 *[[maximum limit]]
-*[[maximum heat]], slogan used by RC
+*[[maximum heat]]
 
 ===Related terms===
 *[[supremum]]
