--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -5,4 +5,10 @@
 # An [[orthography]] of the English language that is chiefly used in the United States.  Compare [[Commonwealth English]].
 
 ===Translations===
+*[[Chinese]]: [[美國英語]] (traditional); [[美国英语]] (simplified)
+*[[French]]: [[anglais américain]] ''m''
 *[[Swedish]]: [[amerikansk engelska]]
+
+{{Wikipedia}}
+
+[[Category:English proper nouns]]
