--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -67,7 +67,7 @@ A conflation of two Old English verbs: [[biddan]] ‘ask, demand’, and [[beoda
 # first person singular present tense of [[bidden]]; to [[pray]]
 
 ----
-==Volapük==
+==[[Volapük]]==
 ===Noun===
 '''bid'''
 #[[sort]]; [[kind]]; [[type]] ; [[race]]
