--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -31,6 +31,7 @@
 *Japanese: [[また]] (mata), [[再び]] (ふたたび, futatabi)
 *Korean: [[다시]] (da-shi)
 *Polish: [[ponownie]], [[jeszcze raz]], [[znowu]]
+*Romanian: [[din nou]]
 *Slovene: [[spet]], [[ponovno]], [[znova]]
 *Spanish: [[otra vez]], [[de nuevo]]
 *Swedish: [[igen]], [[åter]], [[på nytt]]
