--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -1,17 +1,18 @@
-===Pronunciation===
+==English==
 
+===Etymology===
+French from Latin ''[[maxim]]'' + ''[[-um]]''
+
+===Pronunciation===
 '''max*im-um'''
 *[[IPA]]: //
 *[[SAMPA]]: //
 MAAHX-im-muhm
 
-===Etymology===
-
-French from Latin ''[[maxim]]'' + ''[[-um]]''
-
 ===Noun===
 '''maximum''' (plural: '''[[maxima]]''' or '''[[maximums]]''')
-# [[high|Highest]] [[limit]].
+
+# The [[high|Highest]] [[limit]].
 # {{mathematics}} The [[great]]est [[value]] of a [[set]] or other mathematical structure, esp. the [[global maximum]] or a [[local maximum]] of a [[function]].
 
 ====Synonyms====
@@ -49,7 +50,6 @@ French from Latin ''[[maxim]]'' + ''[[-um]]''
 {{top}}
 *Finnish: [[maksimaalinen]]
 {{mid}}
-
 {{bottom}}
 
 ===Derived terms===
@@ -58,12 +58,12 @@ French from Latin ''[[maxim]]'' + ''[[-um]]''
 *[[maximal]]
 *[[maximize]]
 *[[maximum limit]]
-*[[maximum heat]]
 
 ===Related terms===
 *[[supremum]]
 
 [[Category:English irregular plurals]]
+
 [[et:Maximum]]
 [[io:Maximum]]
 [[nl:maximum]]
