--- a/en/l/least weasel.8233.wikitext
+++ b/en/l/least weasel.8233.wikitext
@@ -1,63 +1,64 @@
-=== Pronunciation ===
+==English==
+
+===Pronunciation===
 *[[w:IPA|IPA]]: /'list wizəl/
 
-=== Noun ===
-
+===Noun===
 '''least weasel'''
 
 # [[animal]]
 
-=== Translations ===
+===Translations===
 
-*[[Albanian]]: [[nuse e lalës]]
+*Albanian: [[nuse e lalës]]
 *[[Basque]]: [[erbinude]]
 *[[Belarussian]]: [[ласка]]
 *[[Breton]]: [[kaerell]]
-*[[Bulgarian]]: [[невестулка]] ([[nevestulka]])
+*Bulgarian: [[невестулка]] ([[nevestulka]])
 *[[Catalan]]: [[mostela]]
-*[[Croatian]]: [[lasica]]
-*[[Czech]]: [[lasice]], [[kolčava]]
-*[[Danish]]: [[brud]]
-*[[Dutch]]: [[wezel]] ''m''
-*[[Esperanto]]: [[mustelo]]
+*Croatian: [[lasica]]
+*Czech: [[lasice]], [[kolčava]]
+*Danish: [[brud]]
+*Dutch: [[wezel]] ''m''
+*Esperanto: [[mustelo]]
 *[[Estonian]]: [[nirk]]
-*[[Finnish]]: [[lumikko]]
-*[[French]]: [[belette]] ''f''
+*Finnish: [[lumikko]]
+*French: [[belette]] ''f''
 *[[Frisian]]: [[wezeling]]
 *[[Friulian]]: [[bilite]]
 *[[Gallegan]]: [[donicela]], [[denociña]]
-*[[German]]: [[Wiesel]] ''n''
-*[[Greek]]: [[νυφίτσα]] '' ''
-*[[Hungarian]]: [[menyét]]
-*[[Icelandic]]: [[hreysiköttur]], [[vesla]]
-*[[Indonesian]]: [[]]
-*[[Irish]]: [[bláthnaid ghallda]]
-*[[Italian]]: [[donnola]] ''f''
-*[[Japanese]]: [[]] ([[]], )
+*German: [[Wiesel]] ''n''
+*Greek: [[νυφίτσα]] '' ''
+*Hungarian: [[menyét]]
+*Icelandic: [[hreysiköttur]], [[vesla]]
+*Indonesian: [[]]
+*Irish: [[bláthnaid ghallda]]
+*Italian: [[donnola]] ''f''
+*Japanese: [[]] ([[]], )
 *[[Ladin]]: [[belora]]
-*[[Latin]]: [[Mustela nivalis]] '' ''
+*Latin: [[Mustela nivalis]] '' ''
 *[[Latvian]]: [[zebiekste]]
 *[[Lithuanian]]: [[žebenkštis]]
 *[[Lower Sorbian]]: [[łasyca]], [[łasycka]]
 *[[Macedonian]]: [[невестулка]] ([[nevestulka]])
 *[[Maltese]]: [[ballottra]]
-*[[Norwegian]]: [[snømus]]
+*Norwegian: [[snømus]]
 *[[Occitan]]: [[mostèla]], [[polida]]
-*[[Polish]]: [[łasica]] '' ''
-*[[Portuguese]]: [[doninha]]
-*[[Romanian]]: [[nevăstuica]]
+*Polish: [[łasica]] '' ''
+*Portuguese: [[doninha]]
+*Romanian: [[nevăstuica]]
 *[[Romansh]]: [[mustaila]]
 *[[Romany]]: [[boriori]] ''f''
-*[[Russian]]: [[ласка]] ([[laska]]) '' ''
+*Russian: [[ласка]] ([[laska]]) '' ''
 *[[Sami]]: [[nirpi]]
 *[[Sardinian]]: [[bucca de mele]], [[bucchemeli]]
 *[[Scottish]]: [[neas bheag]]
-*[[Serbian]]: [[ласица]] ([[lasica]])
-*[[Slovak]]: [[lasica]]
+*Serbian: [[ласица]] ([[lasica]])
+*Slovak: [[lasica]]
 *[[Slovenian]]: [[podlasica]]
-*[[Spanish]]: [[mostela]] ''f''
-*[[Swedish]]: [[vessla]]
-*[[Turkish]]: [[gelincik]]
+*Spanish: [[mostela]] ''f''
+*Swedish: [[vessla]]
+*Turkish: [[gelincik]]
 *[[Ukrainian]]: [[ласиця]] ([[lasicja]])
 *[[Upper Sorbian]]: [[kohlica]]
-*[[Welsh]]: [[bronwen]], [[gwenci]]
+*Welsh: [[bronwen]], [[gwenci]]
