--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -1,69 +1,70 @@
-=== Pronunciation ===
+==English==
+
+===Pronunciation===
 *[[w:IPA|IPA]]: /'əɽmaɪn/
 
-=== Noun ===
-
+===Noun===
 '''ermine'''
 
 # [[animal]]
 
-=== Synonyms ===
+===Synonyms===
 
 [[stoat]]
 
-=== Translations ===
+===Translations===
 '''animal'''
 {{top}}
-*[[Albanian]]: [[ermelina]]
+*Albanian: [[ermelina]]
 *[[Basque]]: [[erbinude zuri]]
 *[[Belarussian]]: [[гарнастай]]
 *[[Breton]]: [[erminig]]
-*[[Bulgarian]]: [[хермелин]] ([[hermelin]])
+*Bulgarian: [[хермелин]] ([[hermelin]])
 *[[Catalan]]: [[ermini]]
-*[[Croatian]]: [[zerdav]]
-*[[Czech]]: [[hranostaj]]
-*[[Danish]]: [[hermelin/lækat]]
-*[[Dutch]]: [[hermelijn]] ''m''
-*[[Esperanto]]: [[ermeno]]
+*Croatian: [[zerdav]]
+*Czech: [[hranostaj]]
+*Danish: [[hermelin/lækat]]
+*Dutch: [[hermelijn]] ''m''
+*Esperanto: [[ermeno]]
 *[[Estonian]]: [[kärp]], [[lahits]], [[hermeliin]]
 *[[Faroese]]: [[roysikøttur]]
-*[[Finnish]]: [[kärppä]]
-*[[French]]: [[hermine]] ''f''
+*Finnish: [[kärppä]]
+*French: [[hermine]] ''f''
 *[[Frisian]]: [[harmeling]]
 *[[Friulian]]: [[armelin]]
 *[[Gallegan]]: [[armiño]]
-*[[German]]: [[Hermelin]] ''n''
-*[[Greek]]: [[ερμίνα]] '' ''
-*[[Hungarian]]: [[hermelin]]
-*[[Icelandic]]: [[hreysiköttur]]
-*[[Irish]]: [[easóg]]
-*[[Italian]]: [[ermellino]] ''m''
+*German: [[Hermelin]] ''n''
+*Greek: [[ερμίνα]] '' ''
+*Hungarian: [[hermelin]]
+*Icelandic: [[hreysiköttur]]
+*Irish: [[easóg]]
+*Italian: [[ermellino]] ''m''
 {{mid}}
 *[[Ladin]]: [[armelin]]
-*[[Latin]]: [[Mustela erminea]] '' ''
+*Latin: [[Mustela erminea]] '' ''
 *[[Latvian]]: [[sermulis]]
 *[[Lithuanian]]: [[šermuonėlis]]
 *[[Lower Sorbian]]: [[hermelin]]
 *[[Macedonian]]: [[хермелин]] ([[hermelin]])
 *[[Maltese]]: [[ermellin]]
-*[[Norwegian]]: [[røyskatt]]
+*Norwegian: [[røyskatt]]
 *[[Occitan]]: [[ermina]]
-*[[Polish]]: [[gronostaj]] '' ''
-*[[Portuguese]]: [[arminho]]
-*[[Romanian]]: [[hermelina]]
+*Polish: [[gronostaj]] '' ''
+*Portuguese: [[arminho]]
+*Romanian: [[hermelina]]
 *[[Romansh]]: [[ermelin]]
 *[[Romany]]: [[ermina]] ''f''
-*[[Russian]]: [[горностай]] ([[gornostaj]]) '' ''
+*Russian: [[горностай]] ([[gornostaj]]) '' ''
 *[[Sami]]: [[buoidda]]
 *[[Sardinian]]: [[ermellinu]]
 *[[Scottish]]: [[radan airmeinianach]]
-*[[Serbian]]: [[хермелин]] ([[hermelin]])
-*[[Slovak]]: [[lasica hranostaj]]
+*Serbian: [[хермелин]] ([[hermelin]])
+*Slovak: [[lasica hranostaj]]
 *[[Slovenian]]: [[hermelin]]
-*[[Spanish]]: [[armiño]] ''m''
-*[[Swedish]]: [[hermelin]]
-*[[Turkish]]: [[kakim]]
+*Spanish: [[armiño]] ''m''
+*Swedish: [[hermelin]]
+*Turkish: [[kakim]]
 *[[Ukrainian]]: [[горностай]] ([[gornostaj]])
 *[[Upper Sorbian]]: [[hermelin]], [[(hronostaj)]]
-*[[Welsh]]: [[carlwm]]
+*Welsh: [[carlwm]]
 {{bottom}}
