--- a/en/m/mouflon.8242.wikitext
+++ b/en/m/mouflon.8242.wikitext
@@ -1,65 +1,61 @@
-=== Pronunciation ===
+==English==
+
+===Pronunciation===
 *[[w:IPA|IPA]]: /'mʊflɔn/
 
-=== Noun ===
-
+===Noun===
 '''mouflon'''
 
 # [[animal]]
 
-=== Translations ===
+===Translations===
 
-*[[Albanian]]: [[mufloni]]
+*Albanian: [[mufloni]]
 *[[Basque]]: [[mufloi]]
 *[[Belarussian]]: [[муфлон]]
 *[[Breton]]: [[mouflon]]
-*[[Bulgarian]]: [[муфлон]] ([[muflon]])
+*Bulgarian: [[муфлон]] ([[muflon]])
 *[[Catalan]]: [[mufló]]
-*[[Croatian]]: [[muflon]]
-*[[Czech]]: [[muflon]]
-*[[Danish]]: [[muflon]]
-*[[Dutch]]: [[moeflon]] ''m''
-*[[Esperanto]]: [[muflono]]
+*Croatian: [[muflon]]
+*Czech: [[muflon]]
+*Danish: [[muflon]]
+*Dutch: [[moeflon]] ''m''
+*Esperanto: [[muflono]]
 *[[Estonian]]: [[muflon]]
-*[[Finnish]]: [[mufloni]]
-*[[French]]: [[mouflon]] ''m''
+*Finnish: [[mufloni]]
+*French: [[mouflon]] ''m''
 *[[Frisian]]: [[moeflon]]
 *[[Friulian]]: [[muflon]]
 *[[Gallegan]]: [[muflón]]
-*[[German]]: [[Mufflon]] ''m''
-*[[Greek]]: [[μουφλόν]] '' ''
-*[[Hungarian]]: [[muflon]]
-*[[Icelandic]]: [[]]
-*[[Indonesian]]: [[]]
-*[[Irish]]: [[]]
-*[[Italian]]: [[muflone]] ''m''
-*[[Japanese]]: [[ムフロン]] (mufuron)
+*German: [[Mufflon]] ''m''
+*Greek: [[μουφλόν]] '' ''
+*Hungarian: [[muflon]]
+*Italian: [[muflone]] ''m''
+*Japanese: [[ムフロン]] (mufuron)
 *[[Ladin]]: [[muflon]]
-*[[Latin]]: [[Ovis aries musimon]] '' ''
+*Latin: [[Ovis aries musimon]] '' ''
 *[[Latvian]]: [[muflons]]
 *[[Lithuanian]]: [[muflonas]]
 *[[Lower Sorbian]]: [[muflon]]
 *[[Macedonian]]: [[муфлон]] ([[muflon]])
 *[[Maltese]]: [[muflun]]
-*[[Norwegian]]: [[mufflon]]
+*Norwegian: [[mufflon]]
 *[[Occitan]]: [[moflon]]
-*[[Polish]]: [[muflon]] '' ''
-*[[Portuguese]]: [[muflăo]]
-*[[Romanian]]: [[muflon]]
+*Polish: [[muflon]] '' ''
+*Portuguese: [[muflăo]]
+*Romanian: [[muflon]]
 *[[Romansh]]: [[muflon]]
-*[[Romany]]: [[]]
-*[[Russian]]: [[муфлон]] ([[muflon]]) '' ''
+*Russian: [[муфлон]] ([[muflon]]) '' ''
 *[[Sami]]: [[muflon]], [[meahccesávza]]
 *[[Sardinian]]: [[mruvoni]], [[mugra]], [[muva]], [[murgone]]
-*[[Scottish]]: [[]]
-*[[Serbian]]: [[муфлон]] ([[muflon]])
-*[[Slovak]]: [[muflón]]
+*Serbian: [[муфлон]] ([[muflon]])
+*Slovak: [[muflón]]
 *[[Slovenian]]: [[muflon]]
-*[[Spanish]]: [[muflón]] ''m''
-*[[Swedish]]: [[mufflon]]
-*[[Turkish]]: [[yaban koyunu]], [[muflon]]
+*Spanish: [[muflón]] ''m''
+*Swedish: [[mufflon]]
+*Turkish: [[yaban koyunu]], [[muflon]]
 *[[Ukrainian]]: [[муфлон]] ([[muflon]])
 *[[Upper Sorbian]]: [[muflon]]
-*[[Welsh]]: [[mwfflon]]
+*Welsh: [[mwfflon]]
 
 [[fr:mouflon]]
