+==English==, dewikify common langs, {{infl}} <hander#844487>

--- a/en/h/hander.4308.wikitext
+++ b/en/h/hander.4308.wikitext
@@ -1,5 +1,9 @@
+==English==
+
 ===Noun===
+'''hander'''
+
 #One who hands over or transmits; a conveyor in succession. - [[John Dryden]]
 
 ===Translations===
-*[[Dutch]]: [[overhandiger]]
+*Dutch: [[overhandiger]]
