--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Verb===
-{{regverb|'''attend'''|'''[[attends]]'''|'''[[attended]]'''|'''[[attending]]'''}}
+{{en-verb|attend|attends|attended|attending}}
 # to be at an [[event]]
 #:''Failing to '''attend''' the meeting nearly cost her her job.''
 # to [[pay attention]] to; to [[commit]] oneself to; to give [[thought]] and [[care]] to
