--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -16,16 +16,16 @@
 
 ===Etymology 2===
 ====Noun====
-'''bound'''
+{{en-noun|bound|bounds}}
 # (''often used in plural'') The border of a territory, which one must cross in order to enter or leave the territory.
 #: ''I reached the northern bound of my property, took a deep breath, and walked on.''
 #: ''Somewhere within these bounds you may find a buried treasure.''
 #(''mathematics'') a [[value]] which is known to be greater or smaller than a given set of values
+
 =====Translations=====
 *Dutch: [[limiet]] (1), [[grens]] (1), [[landpaal]] (1)
 *German: [[Schranke]] ''f'' (2)
 *Telugu: పరిధి
-
 =====Derived terms=====
 *[[boundary]]
 *[[least upper bound]]
@@ -44,7 +44,7 @@
 
 ===Etymology 3===
 ====Noun====
-{{sb|bound|bounds}}
+{{en-noun|bound|bounds}}
 # A sizeable jump.
 #: ''The deer crossed the stream in a single '''bound'''.''
 
