--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -94,7 +94,7 @@ From Middle English, from Old English ''[[þing]]''.
 *[[Arabic]]: [[شيء|شّيء]] (ʃajʔ)
 *[[Basque]]: [[gauza]]
 *[[Cantonese]]: [[東西]] (dung1 sai1), [[物]] (mat6), [[事物]] (si6 mat6)
-*[[Chinese[[: [[東西]] (dōngxī), [[物]] (wù), [[事物]] (shìwù)
+*[[Chinese]]: [[東西]] (dōngxī), [[物]] (wù), [[事物]] (shìwù)
 *[[CJKV Characters]]: [[物]], [[事]]
 *[[Danish]]: ting ''c''
 *[[Dutch]]: [[ding]] ''n''
