--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -32,18 +32,30 @@
 #(''slang'') a suit
 
 === Translations ===
-*[[Breton]]: [[c'hwitell]] ''f'' -où ''pl'' (1), [[c'hwitelladenn]] ''f'' -où ''pl'' (2,3)
-*[[Catalan]]: [[xiulet]] ''m''
-*[[Danish]]: [[fløjte]] ''c'' (1), [[fløjt]] ''n'' (2,3)
-*[[Dutch]]: [[fluitje]] ''n'' (1), [[fluittoon]] ''m'' (2,3)
-*[[Finnish]]: [[pilli]] (1), [[vihellys]] (2) (3), [[vislaus]] (2)
-*[[French]]: [[sifflet]] ''m''
-*[[Indonesian]]: [[peluit]]
-*[[Irish]]: [[feadog]]
-*[[Japanese]]: [[笛]] ([[ふえ]], fue)
-*[[Polish]]: [[gwizd]] ''m'' (2,3) [[gwizdek]] ''m'' (1)
-*[[Portuguese]]: [[apito]] ''m''
-*[[Swahili]]: [[kipenga]]
+{{top}}
+*Arabic: {{ARchar|[[صفارة]]}} {{Unicode|(ʂufára)}} {{f}}
+*[[Breton]]: [[c'hwitell]] {{f}}, c'hwitelloù {{p}} (1); [[c'hwitelladenn]] {{f}}, c'hwitelladennoù {{p}} (2,3)
+*[[Catalan]]: [[xiulet]] {{m}}
+*Chinese: [[口哨]] (kǒushào)
+*Danish: [[fløjte]] {{c}} (1), [[fløjt]] {{n}} (2,3)
+*Dutch: [[fluitje]] {{n}} (1), [[fluittoon]] {{m}} (2,3)
+*Finnish: [[pilli]] (1), [[vihellys]] (2) (3), [[vislaus]] (2)
+*French: [[sifflet]] {{m}}
+*German: [[Pfeife]] {{f}}
+{{mid}}
+*Indonesian: [[peluit]]
+*Irish: [[feadog]]
+*Italian: [[fischio]]
+*Japanese: [[笛]] ([[ふえ]], fue), [[口笛]] (くちぶえ, kuchibue)
+*Korean: [[호르라기]] (horeuragi)
+*Polish: [[gwizd]] {{m}} (2,3) [[gwizdek]] {{m}} (1)
+*Portuguese: [[apito]] {{m}}
+*Russian: [[свисток]] (svistók) {{m}}
+*Spanish: [[silbato]] {{m}}
+*Swahili: [[kipenga]]
+*Swedish: [[visselpipa]]
+{{bottom}}
+
 [[Category:1000 English basic words]]
 
 [[fr:whistle]]
