--- a/en/b/betted.6796.wikitext
+++ b/en/b/betted.6796.wikitext
@@ -1,25 +1,25 @@
-=== Verb ===
+==English==
 
+===Verb===
 '''betted'''
 
 # past tense of to [[bet]]
 
-=== Pronunciation ===
+===Pronunciation===
 *[[w:SAMPA|SAMPA]]: /'/
 *[[w:IPA|IPA]]: /'bεtət/
 
-=== Translations ===
-*[[Dutch]]: [[gokte]]
+===Translations===
+*Dutch: [[gokte]]
 
-=== Verb ===
-
+===Verb===
 '''betted'''
 
 # past participle of to [[bet]]
 
-=== Pronunciation ===
+===Pronunciation===
 *[[w:SAMPA|SAMPA]]: /'/
 *[[w:IPA|IPA]]: /'bεtət/
 
-=== Translations ===
-*[[Dutch]]: [[gegokt]]
+===Translations===
+*Dutch: [[gegokt]]
