minor fmt +==Eng== <stoat#848482>

--- a/en/s/stoat.8235.wikitext
+++ b/en/s/stoat.8235.wikitext
@@ -1,8 +1,9 @@
-=== Pronunciation ===
+==English==
+
+===Pronunciation===
 *[[w:IPA|IPA]]: /'stɔɑt/
 
-=== Noun ===
-
+===Noun===
 '''stoat'''
 
 # see [[ermine]]
