--- a/en/w/wassen.4471.wikitext
+++ b/en/w/wassen.4471.wikitext
@@ -1,25 +1,17 @@
 ==Dutch==
+{{nl-conj|was|wast|waste|wasten|hebben|gewassen|wasse}}
+
 ===Verb===
-'''wassen'''
-{{nl-verb-irreg|was|wast|waste|gewassen|wassend}}
+# To [[wash]] or [[clean]].
+# To rub wax on something.
+# To [[grow]], to [[rise]], to [[increase]], to [[become]] [[high]]er and/or [[big]]ger, to [[wax]] (3)
 
-#To [[wash]] or [[clean]].
-#To rub wax on something.
-
-====Translations====
-*English: to [[wash]] (1), to [[clean]] (1), to [[grow]] (2), to [[rise]] (2), to [[increase]] (2), to [[become]] [[high]]er (2) and/or to become [[big]]ger (2), to [[wax]] (3)
-*German: [[waschen]] (1), [[wachsen]] (2), [[waxen]] (3)
+====Derived terms====
+* [[zich wassen]]
 
 ===Adjective===
 '''wassen'''
-
 # made of [[wax]]; [[waxen]]
-
-====Translations====
-*English: [[wax]]
-*German: [[Wachs]]
-
-[[Category:Dutch irregular verbs]]
 
 [[fr:wassen]]
 [[nl:wassen]]
