--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -71,7 +71,8 @@
 *[[Romany]]: [[balo]] ''m'', [[bali]] ''f''
 *Russian: [[свинья]] ([[svin'ja]]) '' ''
 *[[Sami]]: [[spiidni]]
-*[[Sardinian]]: [[procu]], [[tzotzu]], [[tzotzoi]], [[mannali]]
+*Sardinian (northern): [[porcu]], [[mannale]] ''m'', [[sue]] ''f''
+*Sardinian (southern): [[procu]], [[mannali]] ''m'', [[sue]] ''f''
 *Scottish: [[muc]]
 *Serbian: [[свиња]] ([[svinja]])
 *Slovak: [[prasa]] ''n'' (1)
