/* Translations */ <wild boar#852027>

--- a/en/w/wild boar.8245.wikitext
+++ b/en/w/wild boar.8245.wikitext
@@ -52,7 +52,8 @@
 *[[Romany]]: [[divlio-balo]] ''m''
 *Russian: [[кабан]] ([[kaban]]) '' ''
 *[[Sami]]: [[meahccespiidni]]
-*[[Sardinian]]: [[sriboni]], [[mardi de sirba]], [[porcu de ludu]]
+*[[Sardinian (northern)]]: [[sirbone]], [[porcrabu]] ''m''
+*[[Sardinian (southern)]]: [[sriboni]], [[mardi de sirba]]
 *[[Scottish]]: [[torc]]
 *Serbian: [[дивљa свиња]] ([[divlja svinja]])
 *Slovak: [[diviak]] ''m'', [[kanec]] ''m'', [[diviak lesný]]
