--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -29,72 +29,72 @@ from Northern [[French]]
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*'''Albanian''': [[lepuri i gropave]]
-*'''Basque''': [[untxi]]
-*'''Belarusian''': [[трусяня]]/[[трусяне]], [[трус]]
-*'''Bosnian''': [[kunić]]
-*'''Breton''': [[konikl]]
-*'''Bulgarian''': [[заек]] ([[zaek]]) [[:bg:заек|(bg)]]
-*'''Catalan''': [[conill]]
-*'''Chinese''': [[兔]] (tù, baitu, bai2tu4)
-*'''Croatian''': [[kunič]]
-*'''Czech''': [[králík]]
-*'''Danish''': [[kanin]] ''c''
-*'''Dutch''': [[konijn]] ''n''
-*'''Esperanto''': [[kuniklo]]
-*'''Estonian''': [[küülik]]
-*'''Faroese''': [[kanin]]
-*'''Finnish''': [[kaniini]], [[kani]]
-*'''French''': [[lapin]] ''m''
-*'''Frisian''': [[knyn]]
-*'''Friulian''': [[cunin]]
-*'''Gallegan''': [[coello]]
-*'''German''': [[Kaninchen]] ''n''
-*'''Greek''': [[αγριοκούνελο]]
-*'''Hindi''': [[खरगोश]] ''m''
-*'''Hungarian''': [[nyúl]]
-*'''Icelandic''': [[kanína]]
-*'''Interlingua''': [[conilio]]
-*'''Irish''': [[cóinín]]
-*'''Italian''': [[coniglio]] ''m''
+*Albanian: [[lepuri i gropave]]
+*Basque: [[untxi]]
+*Belarusian: [[трусяня]]/[[трусяне]], [[трус]]
+*Bosnian: [[kunić]]
+*Breton: [[konikl]]
+*Bulgarian: [[заек]] ([[zaek]]) [[:bg:заек|(bg)]]
+*Catalan: [[conill]]
+*Chinese: [[兔]] (tù, baitu, bai2tu4)
+*Croatian: [[kunič]]
+*Czech: [[králík]]
+*Danish: [[kanin]] ''c''
+*Dutch: [[konijn]] ''n''
+*Esperanto: [[kuniklo]]
+*Estonian: [[küülik]]
+*Faroese: [[kanin]]
+*Finnish: [[kaniini]], [[kani]]
+*French: [[lapin]] ''m''
+*Frisian: [[knyn]]
+*Friulian: [[cunin]]
+*Gallegan: [[coello]]
+*German: [[Kaninchen]] ''n''
+*Greek: [[αγριοκούνελο]]
+*Hindi: [[खरगोश]] ''m''
+*Hungarian: [[nyúl]]
+*Icelandic: [[kanína]]
+*Interlingua: [[conilio]]
+*Irish: [[cóinín]]
+*Italian: [[coniglio]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*'''Japanese''': [[兎]] ([[ウサギ]], usagi)
-*'''Judeo-Spanish''': [[konejo]]
-*'''Korean''': [[토끼]], to-ggi
-*'''Ladin''': [[conicio]]
-*'''Latin''': [[cuniculus]] ''m''
-*'''Latvian''': [[trusis]]
-*'''Lithuanian''': [[triušis]]
-*'''Lower Sorbian''': [[karnikel]]
-*'''Macedonian''': [[питом заjак]] ([[pitom zajak]])
-*'''Maltese''': [[fenek]]
-*'''Norwegian''': [[kanin]] ''m''
-*'''Occitan''': [[conilh]], [[lapin]]
-*'''Polish''': [[królik]]
-*'''Portuguese''': [[coelho]] ''m''
-*'''Romanian''': [[iepure de vizuină]]
-*'''Romansh''': [[cunigl]]
-*'''Romany''': [[shoshoy(m.) shoshni]] ''f''
-*'''Russian''': [[кролик]] (krolik) "m"
-*'''Russian''': [[крольчиха]] "f"
-*'''Sami''': [[kaniidna]]
-*'''Sardinian''': [[cunillu]], [[cacciappu]]
-*'''Scottish''': [[coineanach]]
-*'''Serbian''': [[кунић]] ([[kunić]])
-*'''Slovak''': [[králik]]
-*'''Slovenian''': [[kunec]] ''m''
-*'''Somali''': [[bakayle]]
-*'''Spanish''': [[conejo]] ''m''
-*'''Swedish''': [[kanin]] ''c''
-*'''Turkish''': [[tavşan]]
-*'''Tzotzil''': [[t'ul]]
-*'''Ukrainian''': [[кріль]] (kril'), [[кролик]] (krolik)
-*'''Upper Sorbian''': [[nukl]]
-*'''Volapük''': [[krolig]]
-*'''Welsh''': [[cwningen]]
+*Japanese: [[兎]] ([[ウサギ]], usagi)
+*Judeo-Spanish: [[konejo]]
+*Korean: [[토끼]], to-ggi
+*Ladin: [[conicio]]
+*Latin: [[cuniculus]] ''m''
+*Latvian: [[trusis]]
+*Lithuanian: [[triušis]]
+*Lower Sorbian: [[karnikel]]
+*Macedonian: [[питом заjак]] ([[pitom zajak]])
+*Maltese: [[fenek]]
+*Norwegian: [[kanin]] ''m''
+*Occitan: [[conilh]], [[lapin]]
+*Polish: [[królik]]
+*Portuguese: [[coelho]] ''m''
+*Romanian: [[iepure]]
+*Romansh: [[cunigl]]
+*Romany: [[shoshoy(m.) shoshni]] ''f''
+*Russian: [[кролик]] (krolik) "m"
+*Russian: [[крольчиха]] "f"
+*Sami: [[kaniidna]]
+*Sardinian: [[cunillu]], [[cacciappu]]
+*Scottish: [[coineanach]]
+*Serbian: [[кунић]] ([[kunić]])
+*Slovak: [[králik]]
+*Slovenian: [[kunec]] ''m''
+*Somali: [[bakayle]]
+*Spanish: [[conejo]] ''m''
+*Swedish: [[kanin]] ''c''
+*Turkish: [[tavşan]]
+*Tzotzil: [[t'ul]]
+*Ukrainian: [[кріль]] (kril'), [[кролик]] (krolik)
+*Upper Sorbian: [[nukl]]
+*Volapük: [[krolig]]
+*Welsh: [[cwningen]]
 |}
 |}
 
