fmt +cat <wassen#853099>

--- a/en/w/wassen.4471.wikitext
+++ b/en/w/wassen.4471.wikitext
@@ -1,17 +1,21 @@
 ==Dutch==
-{{nl-conj|was|wast|waste|wasten|hebben|gewassen|wasse}}
 
 ===Verb===
+'''wassen'''
 # To [[wash]] or [[clean]].
 # To rub wax on something.
-# To [[grow]], to [[rise]], to [[increase]], to [[become]] [[high]]er and/or [[big]]ger, to [[wax]] (3)
+# To [[grow]]; to [[rise]]; to [[increase]]; to [[become]] [[high]]er and/or [[big]]ger; to [[wax]].
+
+====Conjugation====
+{{nl-verb|was|wast|waste|wasten|hebben|gewassen|wasse}}
+[[Category:Dutch strong verbs]]
 
 ====Derived terms====
 * [[zich wassen]]
 
 ===Adjective===
 '''wassen'''
-# made of [[wax]]; [[waxen]]
+# Made of [[wax]]; [[waxen]].
 
 [[fr:wassen]]
 [[nl:wassen]]
