===Hdr=== +==Eng== <mania#853739>

--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -1,3 +1,5 @@
+==English==
+
 ===Etymology===
 Latin [[mania]], from Greek [[μανία]] (''mania'') "madness".
 
@@ -18,7 +20,7 @@ Latin [[mania]], from Greek [[μανία]] (''mania'') "madness".
 # Excessive or unreasonable desire; insane passion affecting one or many people; fanaticism
 <!-- Modified Webster 1913 defs -->
 
-===Related words===
+===Related terms===
 *[[batmania]]
 *[[manic]]
 *[[maniac]]
