dewikify common langs, {{infl}} +==Eng== <multi-billion#853742>

--- a/en/m/multi-billion.34077.wikitext
+++ b/en/m/multi-billion.34077.wikitext
@@ -1,48 +1,20 @@
-===Pronunciation===
+==English==
 
+===Pronunciation===
 '''mul*ti-bil*li-on'''
-*[[IPA]]: //
-*[[SAMPA]]: //
 MOHL-tee-BIL-li-uhn
+
 ===Etymology===
 [[multi-]] + [[billion]]
+
 ===Adjective===
-#Having more than 1,000,000,000 in the billion range.
-#In the old numering system (''Notably British''), equivalent to more than 1,000,000,000,000 in the old billion range
+'''multi-billion'''
+
+# Having more than 1,000,000,000 in the billion range.
+# In the old numering system (''Notably British''), equivalent to more than 1,000,000,000,000 in the old billion range.
 
 ===Translations===
 
-*Arabic:
-*Basque:
-*Catalan:
-*Czech:
-*Danish:
-*Dutch:
-*Esperanto:
-*Finnish:
-*[[French]]: [[multi-billion]]
-*Frisian:
-*German:
-*Greek: 
-*Hebrew:
-*Hindi:
-*Hungarian:
-*Interlingua:
-*Irish:
-*[[Italian]]: [[multi-billione]]
-*Japanese:
-*Korean:
-*[[Latin]]: multi-billion
-*Mandarin:
-*Norwegian:
-*Polish:
-*Portuguese:
-*Romanian:
-*Scottish:
-*Slovene:
-*Spanish:
-*Swedish:
-*Taiwanese:
-*Ukrainian:
-*Urdu:
-*Vietnamese:
+*French: [[multi-billion]]
+*Italian: [[multi-billione]]
+*Latin: multi-billion
