robot  Modifying: pt, uk <adjustment#855545>

--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -51,6 +51,6 @@
 [[de:adjustment]]
 [[fr:adjustment]]
 [[it:adjustment]]
-[[pt:Adjustment]]
+[[pt:adjustment]]
 [[fi:adjustment]]
-[[uk:Adjustment]]
+[[uk:adjustment]]
