--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -32,18 +32,19 @@
 # To be [[sure]] of something; to be able to [[count]] on something.
 #: ''You '''bet'''!''
 
-==== Translations ====
+====Translations====
 {{top}}
 *Breton: [[klaoustreañ]] (1)
 *Czech: [[vsadit se]]  
-*Dutch: [[gokken]] (1), [[van op aan kunnen]] (2), [[er op kunnen rekenen]] (2)
+*Dutch: [[gokken]] (1), [[van op aan kunnen]], [[er op kunnen rekenen]] (2)
 *French: [[parier]] (1)
 *German: [[wetten]] (1)
+*Greek: [[βάζω στοίχημα]] [ˈvazo̞ ˈstiçiˌma], [[στοιχηματίζω]] [stiˌçimaˈtizo̞] (1)
 *Indonesian: [[taruh|bertaruh]], [[taruh|mempertaruhkan]] (1)
 {{mid}}
 *Japanese: [[賭ける]] ([[かける]], kakeru) (1)
-*Latvian: [[nosaukt]] [[likme|likmi]] (1), [[derēt]] (1), [[būt]] [[pārliecināts|pārliecinātam]] (2)
-*Polish: [[postawi&#263;]] , [[zak&#322;ada&#263; si&#281;]]
+*Latvian: [[nosaukt]] [[likme|likmi]], [[derēt]] (1), [[būt]] [[pārliecināts|pārliecinātam]] (2)
+*Polish: [[postawi&#263;]], [[zak&#322;ada&#263; si&#281;]]
 *Slovak: [[staviť sa]]  
 *Swedish: [[slå vad]] (1)
 *[[w:Wu (linguistics)|Wu]] ([[w:Suzhou dialect|Suzhou dialect]]): [[ruánl tondæ]]
