--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -43,6 +43,7 @@
 *Serbian:
 *:Cyrillic: [[кожни#Serbian|кожни]] {{m}}
 *:Latin: [[kožni#Serbian|kožni]] {{m}}
+*Slovene: [[usnjen]] ''m'', [[usnjena]] ''f'', [[usnjeno]] ''n''
 {{bottom}}
 
 ===Transitive verb===
