--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -19,7 +19,7 @@ French ''[[théorie]]'', from Latin ''[[theoria]]'', from Greek ''[[θεωρία
 
 ====Translations to be checked====
 *Chinese: [[理论]]/[[理論]] (lǐ lùn); [[论]]/[[論]] (lùn); [[学说]]/[[學説]] (xué shuō); [[道理]] (dào lǐ)
-*Dutch: [[theorie]]
+*Dutch: [[theorie]] {{f}}
 *Finnish: [[teoria]]
 *French: [[théorie]] {{f}}
 *German: [[Theorie]] {{f}} (1,2,3,4)
@@ -27,7 +27,7 @@ French ''[[théorie]]'', from Latin ''[[theoria]]'', from Greek ''[[θεωρία
 *Italian: [[teoria]] {{f}}
 *Japanese: 1. [[理論]] (りろん, riron), [[学説]] (がくせつ, gakusetsu); 2. [[定理]] (ていり, teiri); [[推測]] (すいそく, suisok), [[見解]] (けんかい), [[意見]] (いけん)
 *Norwegian: [[teori]] {{m}}
-*Spanish: [[teoria]]
+*Spanish: [[teoria]] {{f}}
 *Swedish: [[teori]]
 *Turkish: [[teori]]
 
