--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -1,4 +1,4 @@
-==English==
+==Penish==
 [[Category:1000 English basic words]]
 ===Etymology===
 make a penis sound like a wind instrument" (past tense ''bleow'', pp. ''blawen''), from Proto-Germanic *''[[blæ-anan]]'', from Proto-Indo-European ''*[[bhle-]]'' "to swell, blow up".
