/* Prefix */ Add prefix <sir#869021>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -2,6 +2,11 @@
 ===Etymology===
 Via Norman French from Latin ''[[senior]]'', '''older''' or '''elder''', from ''[[senex]]'', '''old'''
 
+===Prefix===
+'''Sir'''
+
+#''(British)'' The titular prefix given to a [[knight]] or [[baronet]]
+
 ===Noun===
 '''sir''' or '''Sir'''
 
@@ -9,7 +14,6 @@ Via Norman French from Latin ''[[senior]]'', '''older''' or '''elder''', from ''
 #An address to a military [[superior]]
 #An address to any [[male]], especially if his [[name]] or proper [[address]] is unknown
 #:Example: ''Excuse me, sir, could you tell me where the nearest bookstore is?''
-#''(British)'' A title given a male [[knight]] or [[baronet]]
 
 ====Translations====
 *[[Slovak]]: [[pán]] ''m'', [[pane]] ''m vocative''
