robot  Adding: ja, zh Removing: sl Modifying: io <sir#869681>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -55,9 +55,11 @@ Via Norman French from Latin ''[[senior]]'', '''older''' or '''elder''', from ''
 ===Noun===
 '''sir''' ''f'' (''pl'' siroedd)
 #[[county]]
+
 [[fr:sir]]
-[[io:Sir]]
+[[io:sir]]
 [[it:sir]]
 [[ku:sir]]
+[[ja:sir]]
 [[pl:sir]]
-[[sl:Sir]]
+[[zh:sir]]
