--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -3,7 +3,7 @@
 {{rank|like|little|now|78|then|A|should|can}}
 
 ===Pronunciation===
-*{{IPA:|[[WEAE]] /ðɛn/}}
+*[[WEAE]] {{IPA:|/ðɛn/}}
 *{{audio|en-us-then.ogg|Audio (US)}}
 
 ===Homophones===
