robot  Adding: el, zh <squirrel#870682>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -83,7 +83,9 @@
     My mother warned me not to squirrel around in my dad's workshop.
 
 [[bg:squirrel]]
+[[el:squirrel]]
 [[fr:squirrel]]
 [[it:squirrel]]
 [[pl:squirrel]]
 [[fi:squirrel]]
+[[zh:squirrel]]
