--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -21,6 +21,7 @@
 ; force due to gravity
 {{top}}
 *Dutch: [[gewicht]]
+*Finnish: [[paino]]
 *French: [[poids]]
 *German: [[Gewicht]] {{n}}
 {{mid}}
@@ -30,6 +31,7 @@
 ;object to make something heavier
 {{top}}
 *Dutch: [[gewicht]]
+*Finnish: [[paino]]
 *French: [[poids]]
 *German: [[Gewicht]] {{n}}
 {{mid}}
@@ -40,7 +42,6 @@
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
 {{checktrans}}
 *{{ttbc|Russian}}: вес (5)*Chinese: [[重]] (zhòng), [[重量]] (zhòng liàng), [[砝码]] (fá mǎ)
-*{{ttbc|Finnish}}: [[paino]]
 *{{ttbc|Hungarian}}: [[tömeg]]
 *{{ttbc|Ido}} : [[pezo]]
 *{{ttbc|Indonesian}}: [[berat]]
