===Hdr===, {{infl}} (en) <vodka#874895>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -9,8 +9,9 @@
 :Slavic ''voda'', ''woda'' - [[water]]. By a most comon version, vodka is a [[diminutive]] of ''voda''. Historical documentary research of V.Pokhlyobkin suggests the deriviation via the usage "dilution (of [[distil]]late) with water", as used in expresions "vodka of bread wine" and similar ones; ''bread wine'' (хлебное вино) is an archaic Russian name of vodka.
 
 ===Noun===
+{{en-noun-reg}}
 
-# a clear [[distil]]led [[alcoholic]] [[liquor]] made from [[grain]] [[mash]].
+# A clear [[distil]]led [[alcoholic]] [[liquor]] made from [[grain]] [[mash]].
 
 ====Translations====
 {{top}}
@@ -61,7 +62,7 @@
 :'''vodiek''' ''{{genpl}}''
 :{{decpat}} {{zena}}
 # [[vodka#English|vodka]]
-====Derived Words====
+====Derived terms====
 * [[vodkový]] -á -é
 
 [[Category:Russian derivations]]
