/* Translations */ +Telugu <break#876042>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -70,6 +70,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Russian: [[разбить]], [[расколотить]]
 *Spanish: [[romper]]
 *Swedish: [[gå sönder]]
+*Telugu: [[విరుచు]] (virucu), [[విరగగొట్టు]] (viragagoTTu) 
 {{bottom}}
 
 '''intransitive: of a bone'''
@@ -89,6 +90,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Russian: [[сломаться]]
 *Swedish: [[gå sönder]]
 *Swahili: [[kuvunjika]]
+*Telugu: [[చెడిపోవు]] (ceDipOvu)
 {{bottom}}
 
 '''intransitive: interrupt or cease one's work or occupation temporarily'''
@@ -155,6 +157,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *German: [[brechen]]
 {{mid}}
 *Swedish: [[bryta]]
+*Telugu: [[అతిక్రమించు]] (atikramiMcu), [[మీరు]] (meeru)(హద్దుమీరు)
 {{bottom}}
 
 '''transitive: gaming slang: to design or make (a legal but unfair move)'''
