/* Translations */ +Telugu <whistle#876916>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -23,6 +23,7 @@
 *Portuguese: [[apitar]], [[assobiar]]
 *Russian: [[свистеть]] (svistét’)
 *Spanish: [[chiflar]], [[silbar]]
+*{{te}}: [[ఈల వేయు]] (eela vEyu), [[బూర ఊదు]] (boora oodu)
 {{bottom}}
 
 ===Noun===
