robot  Adding: zh <multiplication#883444>

--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -64,3 +64,4 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 [[fr:multiplication]]
 [[it:multiplication]]
 [[pl:multiplication]]
+[[zh:multiplication]]
