--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -119,7 +119,8 @@
 *'''Tok Pisin''': [[bagarapim]] [[sindaun]] bilong<!-- if these words make up a single idiom, they should be wikified as a single entity-->
 |}
 |}
+
 [[bg:badger]]
-[[io:Badger]]
+[[io:badger]]
 [[it:badger]]
 [[nl:badger]]
