--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -169,14 +169,18 @@
 [[Category:1000 English basic words]]
 [[Category:English irregular plurals]]
 
-[[ang:Pig]]
+[[ang:pig]]
+[[el:pig]]
 [[es:pig]]
-[[io:Pig]]
+[[fr:pig]]
+[[ko:pig]]
+[[io:pig]]
 [[it:pig]]
 [[ka:pig]]
 [[ja:pig]]
 [[pl:pig]]
-[[ru:Pig]]
+[[ru:pig]]
 [[fi:pig]]
 [[sv:pig]]
-[[zh:Pig]]
+[[ta:pig]]
+[[zh:pig]]
