robot  Adding: ko, zh Modifying: el, gl, io <blow#892938>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -108,9 +108,11 @@
 *[[blow it]]
 {{bottom}}
 
-[[el:Blow]]
+[[el:blow]]
 [[fr:blow]]
-[[gl:Blow]]
-[[io:Blow]]
+[[gl:blow]]
+[[ko:blow]]
+[[io:blow]]
 [[it:blow]]
 [[fi:blow]]
+[[zh:blow]]
