robot  Adding: zh Modifying: ang, io <pledge#893149>

--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -18,7 +18,8 @@
 # A [[drinking]] [[toast]].
 # ''(the pledge):'' A promise to [[abstain]] from [[drinking]] [[alcohol]].
 
-[[ang:Pledge]]
+[[ang:pledge]]
 [[fr:pledge]]
-[[io:Pledge]]
+[[io:pledge]]
 [[it:pledge]]
+[[zh:pledge]]
