robot  Adding: ta Modifying: gl <bubble#894748>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -41,5 +41,7 @@
 ====Translations====
 *Finnish: [[kuplia]], [[poreilla]]
 *Swedish: [[bubbla]]
-[[gl:Bubble]]
+
+[[gl:bubble]]
 [[it:bubble]]
+[[ta:bubble]]
