robot  Adding: zh Modifying: da, io, pt <qua#895548>

--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -45,8 +45,9 @@
 [[Category:Italian adverbs]]
 [[Category:Latin adverbs]]
 
-[[da:Qua]]
-[[io:Qua]]
+[[da:qua]]
+[[io:qua]]
 [[nl:qua]]
-[[pt:Qua]]
+[[pt:qua]]
 [[vi:qua]]
+[[zh:qua]]
