--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -43,6 +43,7 @@
 *Slovene: [[oglas]] {{m}}, [[reklama]] {{f}}
 *Spanish:  [[anuncio]] {{m}},  [[publicidad]] {{f}}, [[reclamo]] {{m}}
 *Swedish: [[annons]], [[annonsering]], [[reklam]]
+*[[Tamil]] : விளம்பரம்
 *[[Telugu]]: [[వ్యాపార ప్రకటన]]
 *Turkish: [[reklâm]], [[ilan]], [[duyuru]]
 *Vietnamese: [[quảng cáo]], [[giới thiệu]]
