robot  Adding: zh Modifying: io <fraction#902721>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -37,8 +37,9 @@ French from Latin ''[[fractio]]'', '''breaking''', from ''[[frangere]]'', '''bre
 *[[denominator]]
 
 [[fr:fraction]]
-[[io:Fraction]]
+[[io:fraction]]
 [[it:fraction]]
 [[ja:fraction]]
 [[fi:fraction]]
 [[sv:fraction]]
+[[zh:fraction]]
