robot  Adding: fr <itself#903311>

--- a/en/i/itself.7369.wikitext
+++ b/en/i/itself.7369.wikitext
@@ -11,4 +11,5 @@ The reflexive form of ''[[it]]'', the third person singular, neuter, personal pr
 
 [[Category:English third person pronouns]]
 
+[[fr:itself]]
 [[ja:itself]]
