robot  Adding: zh Modifying: io, ru <leather#905270>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -62,7 +62,8 @@
 [[Category:1000 English basic words]]
 
 [[fr:leather]]
-[[io:Leather]]
+[[io:leather]]
 [[it:leather]]
-[[ru:Leather]]
+[[ru:leather]]
 [[fi:leather]]
+[[zh:leather]]
