--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -77,3 +77,5 @@ French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek [[θεωρία]].
 [[it:theory]]
 [[hu:theory]]
 [[fi:theory]]
+[[ta:theory]]
+[[zh:theory]]
