robot  Adding: zh <gamble#915679>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -42,4 +42,6 @@
 *German: aufs [[Spiel]] [[setzen]]
 *[[Interlingua]]: [[poner]] in [[risco]]
 *[[Portuguese]]: [[arriscar]]
+
 [[fi:gamble]]
+[[zh:gamble]]
