--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -80,5 +80,7 @@ The translations below need to be checked by native speakers and inserted into t
 
 [[fr:bamboo]]
 [[io:bamboo]]
+[[hu:bamboo]]
+[[fi:bamboo]]
 [[ta:bamboo]]
 [[zh:bamboo]]
