--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -28,14 +28,18 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 *(2) [[however]]
 
 ==== Translations ====
-*Dutch: [[ondanks]], [[desondanks]]
-*French: [[malgré]], [[bien que]], [[cependant]]
-*Finnish: [[vaikka]]
-*German: [[obwohl]]
-*Indonesian: [[walau]], [[meski]]
+{{top}}
+*[[Romanian]]: [[desi]], de [[parca]]
 *Italian: [[anche]] [[se]]
 *Portuguese: [[apesar]] de
+*French: [[malgré]], [[bien que]], [[cependant]]
+*Finnish: [[vaikka]]
+{{mid}}
+*German: [[obwohl]]
+*Indonesian: [[walau]], [[meski]]
+*Dutch: [[ondanks]], [[desondanks]]
 *Slovak: [[hoci]] (1)
+{{bottom}}
 
 ===Adverb===
 '''though'''
