--- a/en/i/itself.7369.wikitext
+++ b/en/i/itself.7369.wikitext
@@ -12,4 +12,5 @@ The reflexive form of ''[[it]]'', the third person singular, neuter, personal pr
 [[Category:English third person pronouns]]
 
 [[fr:itself]]
+[[hu:itself]]
 [[ja:itself]]
