--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -34,6 +34,7 @@ French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek [[θεωρία]].
 *Russian: [[теория]] (teórija) {{f}}
 *Spanish: [[teoria]] {{f}}
 *Swedish: [[teori]]
+*Turkish: [[teori]]
 {{bottom}}
 
 ====Translations to be checked====
