--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -18,8 +18,9 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 
 ===Conjunction===
 '''though'''
+
 # Despite the fact that; [[although]].
-#:'''''Though''' it's risky, it's worth taking the chance.''
+#:'''''Though''' it’s risky, it’s worth taking the chance.''
 # [[however|However]].
 #:''I will not go there if I'm not secure, '''though'''.''
 
@@ -29,20 +30,21 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 
 ==== Translations ====
 {{top}}
-*[[Romanian]]: [[desi]], de [[parca]]
-*Italian: [[anche]] [[se]]
-*Portuguese: [[apesar]] de
-*French: [[malgré]], [[bien que]], [[cependant]]
+*Dutch: [[ondanks]], [[desondanks]]
 *Finnish: [[vaikka]]
-{{mid}}
+*French: [[malgré]], [[bien que]], [[cependant]]
 *German: [[obwohl]]
 *Indonesian: [[walau]], [[meski]]
-*Dutch: [[ondanks]], [[desondanks]]
+{{mid}}
+*Italian: [[anche]] [[se]]
+*Portuguese: [[apesar]] de
+*Romanian: [[desi]], de [[parca]]
 *Slovak: [[hoci]] (1)
 {{bottom}}
 
 ===Adverb===
 '''though'''
+
 # Despite that fact.
 #:''I will do it, '''though'''.''
 
@@ -54,7 +56,7 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 *[[nevertheless]]
 *[[nonetheless]]
 
-==== Translations ====
+====Translations====
 *Dutch: [[echter]]
 *French: [[néanmoins]]
 *Finnish: [[huolimatta]]
