robot  Adding: hu <though#924479>

--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -69,5 +69,6 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 [[fr:though]]
 [[io:though]]
 [[it:though]]
+[[hu:though]]
 [[fi:though]]
 [[zh:though]]
