--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -27,7 +27,7 @@ French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek [[θεωρία]].
 *German: [[Theorie]] {{f}}
 *Swedish: [[idé]] {{c}}
 
-'''(countable) coherent set of statements attempting to explain observed phenomena'''
+'''(countable) 1. coherent set of statements attempting to explain observed phenomena  2. a logical structure that enables one to deduce the possible results of every experiment that falls within its purview'''
 *German: [[Theorie]] {{f}}
 *Swedish: [[teori]] {{c}}
 
