check fi, add ttbc tags <theory#925116>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -22,53 +22,68 @@ French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek [[θεωρία]].
 
 ====Translations====
 '''(countable) unproven conjecture'''
+{{top}}
+*Finnish: [[teoria]]
 *German: [[Theorie]] {{f}}
+{{mid}}
 *Swedish: [[teori]] {{c}}
+{{bottom}}
 
 '''(uncountable) expectation'''
+{{top}}
+*Finnish: [[teoria]]
 *German: [[Theorie]] {{f}}
+{{mid}}
 *Swedish: [[idé]] {{c}}
+{{bottom}}
 
 '''(countable) 1. coherent set of statements attempting to explain observed phenomena  
+{{top}}
+*Finnish: [[teoria]]
 *German: [[Theorie]] {{f}}
+{{mid}}
 *Swedish: [[teori]] {{c}}
+{{bottom}}
 
 '''(uncountable) field of study'''
+{{top}}
+*Finnish: [[teoria]]
 *German: [[Theorie]] {{f}}
+{{mid}}
 *Swedish: [[teori]] {{c}}
+{{bottom}}
 
 '''(countable) (logic) set of axioms'''
+{{top}}
+*Finnish: [[teoria]]
 *German: [[Theorie]] {{f}}
+{{mid}}
 *Swedish: [[teori]] {{c}}
+{{bottom}}
 
 =====Translations to be checked=====
 {{checktrans}}
 {{top}}
-*Arabic: {{ARchar|[[نظرية]]}} {{Unicode|(naʐaríya)}} {{f}}
-*Chinese: [[理論]], [[理论]] (lǐlùn)
-*Dutch: [[theorie]] {{f}}
-*Finnish: [[teoria]]
-*French: [[théorie]] {{f}}
-*Hungarian: [[elmélet]]
-{{mid}}
-*Italian: [[teoria]] {{f}}
-*Japanese: [[理論]] (りろん, riron)
-*Korean: [[이론]] (iron)
-*Portuguese: [[teoria]] {{f}}
-*Russian: [[теория]] (teórija) {{f}}
-*Spanish: [[teoria]] {{f}}
-*Turkish: [[teori]]
-{{bottom}}
-
+*{{ttbc|Arabic}}: {{ARchar|[[نظرية]]}} {{Unicode|(naʐaríya)}} {{f}}
+*{{ttbc|Chinese}}: [[理論]], [[理论]] (lǐlùn)
 *{{ttbc|Chinese}}: [[理论]]/[[理論]] (lǐlùn); [[论]]/[[論]] (lùn); [[学说]]/[[學説]] (xuéshuō); [[道理]] (dàolǐ)
 *{{ttbc|Dutch}}: [[theorie]] {{f}}
-*{{ttbc|Finnish}}: [[teoria]]
 *{{ttbc|French}}: [[théorie]] {{f}}
 *{{ttbc|Indonesian}}: [[teori]]
 *{{ttbc|Italian}}: [[teoria]] {{f}}
+*{{ttbc|Hungarian}}: [[elmélet]]
+{{mid}}
+*{{ttbc|Italian}}: [[teoria]] {{f}}
+*{{ttbc|Japanese}}: [[理論]] (りろん, riron)
 *{{ttbc|Japanese}}: 1. [[理論]] (りろん, riron), [[学説]] (がくせつ, gakusetsu); 2. [[定理]] (ていり, teiri); [[推測]] (すいそく, suisok), [[見解]] (けんかい, kenkai), [[意見]] (いけん, iken)
+*{{ttbc|Korean}}: [[이론]] (iron)
+*{{ttbc|Portuguese}}: [[teoria]] {{f}}
+*{{ttbc|Russian}}: [[теория]] (teórija) {{f}}
 *{{ttbc|Norwegian}}: [[teori]] {{m}}
 *{{ttbc|Spanish}}: [[teoria]] {{f}}
+*{{ttbc|Turkish}}: [[teori]]
+{{bottom}}
+
 
 ===Related terms===
 *[[complexity theory]]
