robot  Adding: hu <sir#927570>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -60,6 +60,7 @@ Via Norman French from Latin ''[[senior]]'', '''older''' or '''elder''', from ''
 [[io:sir]]
 [[it:sir]]
 [[ku:sir]]
+[[hu:sir]]
 [[ja:sir]]
 [[pl:sir]]
 [[zh:sir]]
