/* Preposition */Redone definitions, new examples. <at#928329>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -16,18 +16,18 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 ===Preposition===
 '''at'''
 
-# indicating place
-#: ''At that precise position.''
-# indicating time
-#: ''At six o'clock.''
-# indicating a target
-#: ''He threw a rock at me.''
-# indicating state
+# In or very near a particular place.
+#: ''At that precise position, at Jim's house.''
+# (Indicating time) Simultaneous with.
+#: ''At six o'clock, at closing time.''
+# In the direction of (often in an unfocused or uncaring manner).
+#: ''He threw the ball at me, he shouted at her.''
+# Occupied in (activity).
 #: ''Men at work.''
-# the logogram [[@]]
+# The logogram [[@]].
 
 ====Translations====
-'''at''' (indicating place)
+'''at''' (in or very near a particular place)
 {{top}}
 *Arabic: {{ARchar|[[عند]]}} ({{IPAchar|[[ʕand]]}})  
 *[[Breton]]: [[e#Breton|e]]
@@ -105,7 +105,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *:''At midnight'' = vid midnatt
 {{bottom}}
 
-'''at''' (indicating a target)
+'''at''' (in the direction of)
 {{top}}
 *Arabic: {{ARchar|[[في]]}} (fi)
 *Bulgarian: [[в#Bulgarian|в]] (v), [[на#Bulgarian|на]] (na)
