--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -39,7 +39,8 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 *Italian: [[anche]] [[se]]
 *Portuguese: [[apesar]] de
 *Romanian: [[desi]], de [[parca]]
-*Slovak: [[hoci]] (1)
+*Slovak: [[hoci]] 
+*Spanish: [[sin embargo]], [[a pesar de]]
 {{bottom}}
 
 ===Adverb===
