--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -37,6 +37,7 @@
 {{mid}}
 *French: [[alors]], [[à]] [[cette]] [[époque]]-[[là]]
 *Old English: [[þa|þā]]
+*Spanish: [[entonces]]
 {{bottom}}
 
 ;soon afterward (2)
@@ -46,6 +47,7 @@
 {{mid}}
 *French: [[puis]]
 *Old English: [[þa|þā]]
+*Spanish: [[luego]]
 {{bottom}}
 
 ;next in order (3)
@@ -55,6 +57,7 @@
 {{mid}}
 *French: [[puis]]
 *Old English: [[þa|þā]]
+*Spanish: [[después]]
 {{bottom}}
 
 ;in that case (4)
@@ -66,6 +69,7 @@
 {{mid}}
 *Old English: [[þa|þā]]
 *Russian: [[тогда]] (togdá)
+*Spanish: [[entonces]]
 {{bottom}}
 
 ;at the same time; on the other hand (5)
@@ -74,6 +78,7 @@
 *Finnish: [[toisaalta]] [[:fi:toisaalta|^]]
 {{mid}}
 *Russian: [[тогда]] (togdá)
+*Spanish: [[también]]
 {{bottom}}
 
 =====Translations to be categorized=====
