--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -30,6 +30,7 @@
 *[[Breton]]: [[broc’h]]
 *[[Bulgarian]]: [[язовец]] (jazovec)
 *[[Catalan]]: [[teixó]]
+*[[Cherokee]]: [[ᎤᎫᎾ]] (uguna)
 *[[Croatian]]: [[jazavac]]
 *[[Czech]]: [[jezevec]]
 *[[Danish]]: [[grævling]]
