--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -40,7 +40,7 @@
 *Portuguese: [[ajustamento]] ''m'', [[ajuste]] ''m''
 *Russian: [[]]
 *Slovene: [[popravek]] ''m''
-*Spanish: [[]] ''''
+*Spanish: [[ajuste]] ''''
 *Swedish: [[justering]] ''c''
 *[[Telugu]]: [[సర్దుబాటు]]
 *[[Tupinambá]]: [[]]
