[[Image:Badger.png|thumbnail|right|A badger]] <badger#938068>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -1,4 +1,3 @@
-[[image:badger.png|thumb|right|400px|A Badger]]
 ==English==
 [[Category:Mammals]]
 
@@ -8,6 +7,7 @@
 *{{audio|en-us-badger.ogg|Audio (US)}}
 
 === Noun ===
+[[Image:Badger.png|thumbnail|right|A badger]]
 '''badger''' (''plural'' [[badgers]])
 
 # Any of several carnivorous burrowing [[animal]]s in the family ''Mustelidae''.
