/* English */ Swedish translation + More senses <then#940797>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -9,22 +9,36 @@
 ===Homophones===
 [[than]] (distinguished in WEAE: /ðæn/)
 
+
+===Adjective===
+'''then'''
+# being so at that time
+
+===Translations===
+
+'''being so at that time'''
+{{top}}
+{{mid}}
+*Swedish: [[dåvarande]]
+{{bottom}}
+
 ===Adverb===
 '''then'''
 
-#{{time}}: at that time.
-#:''He was happy then.''
+#at that [[time]]
+#:''He was happy '''then'''.''
 #soon afterward.
-#:''He fixed it, then left.''
+#:''He fixed it, '''then''' left.''
 #next in order; in addition.
-#:''There are three green ones, then a blue one.''
+#:''There are three green ones, '''then''' a blue one.''
 #in that case.
-#:''If it’s locked, then we’ll need the key.''
+#:''If it’s locked, '''then''' we’ll need the key.''
 #at the same time; on the other hand.
-#:''That’s a nice shirt, but then, so is the other one.''
+#:''That’s a nice shirt, but '''then''', so is the other one.''
 
 ====Synonyms====
-*(''soon afterward''): [[and then]] [[and so]], [[subsequently]], [[so]]
+*(''soon afterward''): [[and then]], [[and so]], [[subsequently]], [[so]]
+*(''next in order''): [[and then]]
 
 ===Translations===
 
@@ -47,7 +61,7 @@
 *French: [[puis]]
 *Old English: [[þa|þā]]
 *Spanish: [[luego]]
-*Swedish: [[därpå]], [[ [[sedan]]
+*Swedish: [[därpå]], [[sen]], [[sedan]], [[så]]
 {{bottom}}
 
 '''next in order'''
@@ -58,6 +72,7 @@
 *French: [[puis]]
 *Old English: [[þa|þā]]
 *Spanish: [[después]]
+*Swedish: [[dessutom]], [[sen]], [[sedan]]
 {{bottom}}
 
 '''in that case'''
@@ -70,6 +85,7 @@
 *Old English: [[þa|þā]]
 *Russian: [[тогда]] (togdá)
 *Spanish: [[entonces]]
+*Swedish: [[alltså]], [[då]], [[i så fall]]
 {{bottom}}
 
 '''at the same time; on the other hand'''
@@ -86,6 +102,12 @@
 
 #that time
 #:''It will be finished before '''then'''.''
+
+'''being so at that time'''
+{{top}}
+{{mid}}
+*Swedish: [[dess]], [[då]]
+{{bottom}}
 
 =====Translations to be categorized=====
 {{checktrans}}
