robot  Adding: el <theory#944039>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -106,6 +106,7 @@ French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek [[θεωρία]].
 [[Category:Check translations]]
 [[Category:Greek derivations]]
 
+[[el:theory]]
 [[fr:theory]]
 [[it:theory]]
 [[hu:theory]]
