--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -3,7 +3,7 @@
 {{rank|also|away|against|148|though|get|eyes|hand}}
 
 ===Etymology===
-Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse (and also [[icelandic]]) [[þó]].
+Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse [[þó]].
 
 ===Pronunciation===
 {| border=1 cellpadding=5
